# aind-ibl-ephys-channel-locations-to-docdb

./: README.md  pyproject.toml
.codeocean/: environment.json  secrets.json
code/: models.py  streamlit_app.py  utils.py
environment/: Dockerfile
