[project]
name = "aind-ibl-ephys-channel-locations-to-docdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aind-data-schema-models",
    "aind-session>=0.3.21",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.54.0",
]
